--- a/portal-cache-ehcache-multiple/build.gradle
+++ b/portal-cache-ehcache-multiple/build.gradle
@@ -6,6 +6,6 @@ dependencies {
 	provided group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "default"
 	provided group: "org.osgi", name: "org.osgi.service.component", version: "1.3.0"
 	provided group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.3.0"
-	provided project(":apps:foundation:portal-cache:portal-cache")
+	provided group: "com.liferay", name: "com.liferay.portal.cache", version: "2.3.0"
 	provided project(":apps:foundation:portal-cache:portal-cache-ehcache")
 }
