--- a/portal-cache-ehcache-multiple/build.gradle
+++ b/portal-cache-ehcache-multiple/build.gradle
@@ -7,5 +7,5 @@ dependencies {
 	provided group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "2.40.0"
 	provided group: "org.osgi", name: "org.osgi.service.component", version: "1.3.0"
 	provided group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.3.0"
-	provided project(":apps:foundation:portal-cache:portal-cache-ehcache")
+	provided group: "com.liferay", name: "com.liferay.portal.cache.ehcache", version: "2.1.0"
 }
