--- a/portal-cache-ehcache/build.gradle
+++ b/portal-cache-ehcache/build.gradle
@@ -5,7 +5,7 @@ dependencies {
 	provided group: "net.sf.ehcache", name: "ehcache", version: "2.8.3"
 	provided group: "org.osgi", name: "org.osgi.service.component", version: "1.3.0"
 	provided group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.3.0"
-	provided project(":apps:foundation:portal-cache:portal-cache")
+	provided group: "com.liferay", name: "com.liferay.portal.cache", version: "2.4.0"
 
 	testCompile group: "com.liferay", name: "com.liferay.portal.cache.test.util", version: "1.0.0"
 }
