--- a/portal-cache-ehcache/build.gradle
+++ b/portal-cache-ehcache/build.gradle
@@ -7,5 +7,6 @@ dependencies {
 	provided group: "org.osgi", name: "org.osgi.service.component", version: "1.3.0"
 	provided group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.3.0"
 
+	testCompile group: "com.liferay", name: "com.liferay.petra.lang", version: "1.0.0"
 	testCompile group: "com.liferay", name: "com.liferay.portal.cache.test.util", version: "1.0.0"
 }
