--- a/portal-cache-test-util/build.gradle
+++ b/portal-cache-test-util/build.gradle
@@ -4,6 +4,9 @@ dependencies {
 	provided group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "2.49.0"
 	provided group: "commons-lang", name: "commons-lang", version: "2.6"
 	provided group: "junit", name: "junit", version: "4.12"
+
+	testCompile group: "com.liferay", name: "com.liferay.petra.lang", version: "1.0.0"
+	testCompile group: "com.liferay.portal", name: "com.liferay.portal.impl", version: "2.0.0"
 }
 
 liferay {
