--- a/portal-cache-test-util/build.gradle
+++ b/portal-cache-test-util/build.gradle
@@ -5,7 +5,10 @@ dependencies {
 	provided group: "commons-lang", name: "commons-lang", version: "2.6"
 	provided group: "junit", name: "junit", version: "4.12"
 
+	testCompile group: "com.liferay", name: "com.liferay.petra.concurrent", version: "1.0.0"
 	testCompile group: "com.liferay", name: "com.liferay.petra.lang", version: "1.0.0"
+	testCompile group: "com.liferay", name: "com.liferay.petra.memory", version: "1.0.0"
+	testCompile group: "com.liferay", name: "com.liferay.registry.api", version: "1.1.0"
 	testCompile group: "com.liferay.portal", name: "com.liferay.portal.impl", version: "2.0.0"
 }
 
