--- a/portal-cache/build.gradle
+++ b/portal-cache/build.gradle
@@ -7,4 +7,6 @@ dependencies {
 	compileOnly group: "commons-collections", name: "commons-collections", version: "3.2.1"
 	compileOnly group: "org.osgi", name: "org.osgi.core", version: "5.0.0"
 	compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.3.0"
+
+	testCompile group: "com.liferay", name: "com.liferay.registry.api", version: "1.0.0"
 }
